# FastAPICRUD

./: .env  main.py  pyproject.toml  sql_app.db
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/templates/: base.html  create.html  edit.html  index.html
app/templates/partials/: _messages.html
backend/: .env.sample  app.js  index.js  package-lock.json  package.json
backend/routes/: cases.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CaseModal.jsx  Navbar.jsx  caseFilter.jsx  casePagination.jsx  caseRand20.jsx  caseSearch.jsx
frontend/src/pages/: caseDetail.jsx  caseList.jsx
static/css/: styles.css
static/js/: scripts.js
